Removed fixed with on mobile

--- a/src/ikr-about-artist-block/style.scss
+++ b/src/ikr-about-artist-block/style.scss
@@ -1,11 +1,11 @@
 .wp-block-cgb-block-illkidrecords-blocks-about-artist-block {
     padding: 2rem 2rem 15rem;
     p {
-        font-size: 1.5rem;
-        font-family: 'Helvetica Neue';
+        font-size: 1rem;
+        font-family: 'HelveticaNeueMed';
         line-height: 40px;
         font-weight: 500;
-        color: #929292;
+        color: #333;
     }
     .about__container--description {
         a {
